added post-processing heuristics
- question restart if corrupted question
- avoid generating pronouns
- list_banned_verbs

--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-28T15:05:24.263928Z",
-     "start_time": "2020-04-28T15:05:24.257399Z"
+     "end_time": "2020-05-11T06:21:03.766174Z",
+     "start_time": "2020-05-11T06:21:03.707702Z"
     }
    },
    "outputs": [],
@@ -28,20 +28,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-28T15:08:47.454589Z",
-     "start_time": "2020-04-28T15:08:47.416627Z"
+     "end_time": "2020-05-11T06:21:04.459967Z",
+     "start_time": "2020-05-11T06:21:04.077268Z"
     },
     "code_folding": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex.\n"
+     ]
+    }
+   ],
    "source": [
     "from BERTQG.token_generation import load_model, generate_token\n",
     "#from Regularization_module import Regularizer_Discriminator\n",
     "from itertools import groupby\n",
     "\n",
+    "list_wh = ['what', 'which', 'where', 'when', 'who', 'why', 'how', 'whom', 'whose']\n",
     "\n",
     "class QuestionGeneration():\n",
     "    def __init__(self, bert_model, lm_gq, uqa_qg, regularization=None):\n",
@@ -61,29 +70,55 @@
     "        Output:\n",
     "            - The next generated question token\n",
     "        '''\n",
-    "        # contains the tokens of the generated question\n",
-    "        list_question_tokens = []\n",
     "        # contains the classes of each token of the gen. question. Same len as list_question_tokens\n",
     "        # 0 = UQA, 1 = LM\n",
     "        list_token_classes = []\n",
     "        qi = None\n",
     "        \n",
+    "        list_banned_verbs = []\n",
+    "        list_question_failures = []\n",
+    "        \n",
     "        # generation finished when [SEP] is created\n",
     "        while not self.__finished_generation(qi):\n",
     "            question_text = \" \".join(list_question_tokens)\n",
     "            \n",
-    "            # Generate the toknes and probs of the ith query token using the lm and uqa models\n",
+    "            # Generate the tokens and probs of the ith query token using the lm and uqa models\n",
     "            lm_qi_token, lm_qi_idx, lm_qi_probs = generate_token(self.lm_qg, self.tokenizer, self.device, context, question_text, ans, ans_start)\n",
     "            uqa_qi_token, uqa_qi_idx, uqa_qi_probs = generate_token(self.uqa_qg, self.tokenizer, self.device, context, question_text, ans, ans_start)\n",
     "            \n",
+    "            print(\"lm tokens\", self.__get_topk_tokens(lm_qi_probs))\n",
+    "            print(\"uqa_qi_probs\", self.__get_topk_tokens(uqa_qi_probs))\n",
+    "            \n",
+    "            # Check if the question is corrupted\n",
+    "            \n",
+    "            list_lm_tokens = self.__get_topk_tokens(lm_qi_probs)\n",
+    "            list_uqa_tokens = self.__get_topk_tokens(uqa_qi_probs)\n",
+    "            corrupted_question = self.__corrupted_question(list_question_tokens[-1], list_lm_tokens, list_uqa_tokens)\n",
+    "            if corrupted_question:\n",
+    "                print(\"Restarting question!!!!\")\n",
+    "                list_banned_verbs.append(list_question_tokens[1])\n",
+    "                # restart the question with a new verb becasue we reached a corrupted question\n",
+    "                list_question_tokens = [list_question_tokens[0]]\n",
+    "                list_question_failures.append(question_text)\n",
+    "                list_token_classes = []\n",
+    "                continue\n",
+    "            \n",
     "            # Get token class to use\n",
     "            qi_class = self.regularization.predict_class(list_token_classes)\n",
+    "            \n",
+    "            \n",
     "            # Get the predicted token\n",
     "            if qi_class == 1: # LM\n",
+    "                # clean prob distrib of lm\n",
+    "                lm_qi_token, lm_qi_probs = self.__clean_token_distrib(lm_qi_probs, list_question_tokens, list_banned_verbs)\n",
     "                qi = lm_qi_token\n",
     "            else: # UQA\n",
+    "                #clean the prob distrib of uqa\n",
+    "                uqa_qi_token, uqa_qi_probs = self.__clean_token_distrib(uqa_qi_probs, list_question_tokens, list_banned_verbs)\n",
     "                qi = uqa_qi_token\n",
-    "\n",
+    "                \n",
+    "            print(\"qi_class\", qi_class)\n",
+    "            print(\"################\")\n",
     "            list_question_tokens.append(qi)\n",
     "            list_token_classes.append(qi_class)\n",
     "            \n",
@@ -92,11 +127,65 @@
     "#             print([\"UQA\" if cls == 0 else \"LM\" for cls in list_token_classes])\n",
     "#             print(\"\\n\")\n",
     "        list_question_tokens = self.__remove_consecutive_repeated_tokens(list_question_tokens)\n",
+    "        print(\"Attempted Questions:\", list_question_failures)\n",
     "        return \" \".join(list_question_tokens[:-1]) # without [SEP]\n",
     "            \n",
     "    def __finished_generation(self, question_token):\n",
     "        return question_token =='[SEP]'\n",
     "    \n",
+    "    def __prob_distrib2tokens(self, probs):\n",
+    "        return self.tokenizer.convert_ids_to_tokens(probs)\n",
+    "    \n",
+    "    def __get_topk_tokens(self, probs, topk=10):\n",
+    "        '''\n",
+    "        Input:\n",
+    "            - probs: probability distribution over vocab (output distribution)\n",
+    "            - topk: k to return\n",
+    "        Output:\n",
+    "            - list of tokens (top 1 to k)\n",
+    "        '''\n",
+    "        return self.tokenizer.convert_ids_to_tokens(reversed(np.argsort(probs.tolist())[-topk:]))\n",
+    "\n",
+    "    def __ignore_probs(self, probs, idx_list):\n",
+    "        '''\n",
+    "        Input:\n",
+    "            - probs: probability distribution over vocab (output distribution)\n",
+    "            - idx_list: index list to ignore (to force it as -inf)\n",
+    "        Output:\n",
+    "            - new probs where probabilities of some tokens are ignored\n",
+    "        '''\n",
+    "        for idx in idx_list:\n",
+    "            probs[idx] = -float('inf')\n",
+    "        return probs\n",
+    "\n",
+    "    def __clean_token_distrib(self, probs, list_tokens: list, list_banned_verbs: list):\n",
+    "        wh_generated = any([True for token in list_tokens if token.lower() in list_wh])\n",
+    "        list_to_remove = ['you', 'it', 'they', 'he', 'she', \"i\", 'we']\n",
+    "        list_to_remove.extend(list_banned_verbs)\n",
+    "        if wh_generated:\n",
+    "            # if the wh word was already geneerated, do no generate more wh word\n",
+    "            list_to_remove.extend(list_wh)\n",
+    "        ignore_idx_list = self.tokenizer.convert_tokens_to_ids(list_to_remove)\n",
+    "        probs = self.__ignore_probs(probs, ignore_idx_list)\n",
+    "        list_topk_tokens = self.__get_topk_tokens(probs)\n",
+    "        return list_topk_tokens[0], probs\n",
+    "       \n",
+    "        \n",
+    "    def __corrupted_question(self, prev_token: str, list_lm_tokens: list, list_uqa_tokens: list):\n",
+    "        '''\n",
+    "        If the output distrib. are like:\n",
+    "            lm tokens ['##n', '##ns', '##nn', '##na', '##ne', '##m', '##nne', '##nb', '##nt', '##nia']\n",
+    "            uqa_qi_probs ['##n', '##ns', '##nh', '##ne', '##na', '##nst', '##s', '##no', '##ness', '##ng']\n",
+    "        the question is corrupted and we should backtrack. Maybe a different verb is needed\n",
+    "        '''\n",
+    "        #take the top 10 tokens\n",
+    "        list_lm_tokens = list_lm_tokens[:10]\n",
+    "        list_uqa_tokens = list_uqa_tokens[:10]\n",
+    "        \n",
+    "        num_hash_lm = sum([1 for token in list_lm_tokens if \"##\" in token])\n",
+    "        num_hash_uqa = sum([1 for token in list_uqa_tokens if \"##\" in token])\n",
+    "        return num_hash_lm >= 7 and num_hash_uqa > 7 and prev_token in self.tokenizer.vocab\n",
+    "        \n",
     "    def __remove_consecutive_repeated_tokens(self, list_tokens):\n",
     "        '''\n",
     "        Removes consecutive tokens.\n",
@@ -110,11 +199,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-28T15:08:52.230835Z",
-     "start_time": "2020-04-28T15:08:48.699639Z"
+     "end_time": "2020-05-11T06:21:10.608658Z",
+     "start_time": "2020-05-11T06:21:04.461405Z"
     }
    },
    "outputs": [
@@ -122,9 +211,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04/29/2020 01:19:27 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
-      "04/29/2020 01:19:27 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
-      "04/29/2020 01:19:27 - INFO - BERTQG.modeling -   Model config {\n",
+      "05/11/2020 06:21:04 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
+      "05/11/2020 06:21:06 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
+      "05/11/2020 06:21:06 - INFO - BERTQG.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -151,9 +240,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04/29/2020 01:19:29 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
-      "04/29/2020 01:19:29 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
-      "04/29/2020 01:19:29 - INFO - BERTQG.modeling -   Model config {\n",
+      "05/11/2020 06:21:08 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
+      "05/11/2020 06:21:08 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
+      "05/11/2020 06:21:08 - INFO - BERTQG.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -194,41 +283,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-28T15:13:19.847214Z",
-     "start_time": "2020-04-28T15:13:19.839996Z"
+     "end_time": "2020-05-11T06:21:10.612119Z",
+     "start_time": "2020-05-11T06:21:10.610202Z"
     }
    },
    "outputs": [],
    "source": [
-    "context = \"The city has a proud history of theatre. Stephen Kemble of the famous Kemble family successfully managed the original Theatre Royal, Newcastle for fifteen years (1791–1806). He brought members of his famous acting family such as Sarah Siddons and John Kemble out of London to Newcastle. Stephen Kemble guided the theatre through many celebrated seasons. The original Theatre Royal in Newcastle was opened on 21 January 1788 and was located on Mosley Street. It was demolished to make way for Grey Street, where its replacement was built.\"\n",
-    "question_text = \"when did the original theatre royal open ?\"\n",
-    "ans = \"1788\"\n",
-    "ans_start = context.find(ans)\n",
-    "assert context[ans_start:ans_start+len(ans)] == ans"
+    "context = \"The black bittern (Ixobrychus flavicollis) is a bittern of Old World origin, breeding in tropical Asia from Bangladesh, Pakistan, India, and Sri Lanka east to China, Indonesia, and Australia. It is mainly resident, but some northern birds migrate short distances.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-11T06:21:10.718339Z",
+     "start_time": "2020-05-11T06:21:10.613368Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ans = \"Pakistan\"\n",
+    "ans_start = context.find(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-11T06:21:13.159850Z",
+     "start_time": "2020-05-11T06:21:10.723267Z"
+    }
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lm tokens ['is', 'did', 'are', 'can', 'do', 'does', '?', 'where', 'it', 'will']\n",
+      "uqa_qi_probs ['is', 'are', 'can', 'breeding', 'in', 'else', 'do', 'was', 'to', 'and']\n",
+      "qi_class 0\n",
+      "################\n",
+      "lm tokens ['it', 'the', '?', 'its', 'found', 'this', 'that', 'located', 'from', 'a']\n",
+      "uqa_qi_probs ['the', 'breeding', 'in', 'your', 'this', 'an', 'a', 'bangladesh', 'tropical', 'that']\n",
+      "qi_class 1\n",
+      "################\n",
+      "lm tokens ['bitter', '?', 'black', 'name', 'world', 'red', 'common', 'largest', 'most', 'burma']\n",
+      "uqa_qi_probs ['black', 'tropical', 'breeding', 'blue', 'white', 'african', 'red', 'negro', 'southern', 'south']\n",
+      "qi_class 1\n",
+      "################\n",
+      "lm tokens ['##n', '##ns', '##nn', '##na', '##ne', '##m', '##nne', '##nb', '##nt', '##nia']\n",
+      "uqa_qi_probs ['##n', '##ns', '##nh', '##ne', '##na', '##nst', '##s', '##no', '##ness', '##ng']\n",
+      "Restarting question!!!!\n",
+      "lm tokens ['is', 'did', 'are', 'can', 'do', 'does', '?', 'where', 'it', 'will']\n",
+      "uqa_qi_probs ['is', 'are', 'can', 'breeding', 'in', 'else', 'do', 'was', 'to', 'and']\n",
+      "qi_class 0\n",
+      "################\n",
+      "lm tokens ['the', 'they', 'you', 'these', 'it', 'there', '?', 'its', 'those', 'found']\n",
+      "uqa_qi_probs ['you', 'the', 'breeding', 'your', 'these', 'in', 'there', 'we', 'they', 'new']\n",
+      "qi_class 1\n",
+      "################\n",
+      "lm tokens ['bitter', '?', 'black', 'fl', 'burma', 'birds', 'two', 's', '.', 'species']\n",
+      "uqa_qi_probs ['black', 'tropical', 'breeding', 'white', 'african', 'two', 'blue', 'wild', 'blacks', 'southern']\n",
+      "qi_class 0\n",
+      "################\n",
+      "lm tokens ['bitter', 'bitterness', 'fl', 'rum', 'sore', 'sour', 'long', 'ren', 'reg', 'carp']\n",
+      "uqa_qi_probs ['bitter', 'of', 'long', 'sweet', 'bitterness', 'british', 'tasting', 'carp', 'reg', 'munster']\n",
+      "qi_class 1\n",
+      "################\n",
+      "lm tokens ['##n', '##ns', '##nn', '##nne', '##nia', '##nl', '##s', '##nni', '##nst', '##nb']\n",
+      "uqa_qi_probs ['##n', '##ns', '##s', '##nn', '##nh', '##na', '##ne', '##nst', '##nin', '##nb']\n",
+      "Restarting question!!!!\n",
+      "lm tokens ['is', 'did', 'are', 'can', 'do', 'does', '?', 'where', 'it', 'will']\n",
+      "uqa_qi_probs ['is', 'are', 'can', 'breeding', 'in', 'else', 'do', 'was', 'to', 'and']\n",
+      "qi_class 0\n",
+      "################\n",
+      "lm tokens ['i', 'it', 'we', 'you', 'the', 'they', 'see', 'find', 'be', 'this']\n",
+      "uqa_qi_probs ['i', 'you', 'we', 'breeding', 'a', 'they', 'the', 'your', 'he', 'ye']\n",
+      "qi_class 1\n",
+      "################\n",
+      "lm tokens ['bitter', 'black', 'name', '?', 'red', 'white', 'swallow', 'is', 'grass', 'fl']\n",
+      "uqa_qi_probs ['black', 'white', 'blue', 'red', 'african', 'negro', 'blacks', 'dark', 'breeding', 'tropical']\n",
+      "qi_class 0\n",
+      "################\n",
+      "lm tokens ['bitter', 'bitterness', 'rum', 'sour', 'rag', 'long', 'reg', 'ren', 'taste', 'is']\n",
+      "uqa_qi_probs ['bitter', 'sweet', 'of', 'long', 'bitterness', 'reg', 'tasting', 'taste', 'british', 'carp']\n",
+      "qi_class 0\n",
+      "################\n",
+      "lm tokens ['##n', '##ns', '##ne', '##nn', '##m', '##na', '##nne', '##nl', '##nia', '##nst']\n",
+      "uqa_qi_probs ['##n', '##ns', '##nh', '##nn', '##ne', '##s', '##na', '##nst', '##nb', '##no']\n",
+      "Restarting question!!!!\n",
+      "lm tokens ['is', 'did', 'are', 'can', 'do', 'does', '?', 'where', 'it', 'will']\n",
+      "uqa_qi_probs ['is', 'are', 'can', 'breeding', 'in', 'else', 'do', 'was', 'to', 'and']\n",
+      "qi_class 1\n",
+      "################\n",
+      "lm tokens ['the', 'it', 'you', 'they', 'this', 'come', 'its', 'these', 'your', 'get']\n",
+      "uqa_qi_probs ['you', 'breeding', 'the', 'i', 'your', 'they', 'ye', 'we', 'he', 'bangladesh']\n",
+      "qi_class 0\n",
+      "################\n",
+      "lm tokens ['occur', 'come', 'in', 'go', 'from', 'begin', '?', 'of', 'take', 'range']\n",
+      "uqa_qi_probs ['in', 'tropical', 'and', 'out', 'is', 'breeding', 'are', 'people', 'son', 'the']\n",
+      "qi_class 1\n",
+      "################\n",
+      "lm tokens ['?', 'in', 'from', 'to', ',', 'when', 'between', '.', 'is', 'before']\n",
+      "uqa_qi_probs ['in', 'from', '?', 'breeding', 'tropical', 'and', ',', 'to', 'between', 'when']\n",
+      "qi_class 0\n",
+      "################\n",
+      "lm tokens ['?', 'india', 'the', 'south', 'bangladesh', 'east', 'china', 'burma', 'tropical', 'north']\n",
+      "uqa_qi_probs ['tropical', 'bangladesh', 'southern', 'the', 'subtropical', 'new', 'south', 'breeding', 'between', 'pan']\n",
+      "qi_class 0\n",
+      "################\n",
+      "lm tokens ['asia', 'india', 'africa', 'america', 'china', '?', '##asia', 'asian', 'east', '.']\n",
+      "uqa_qi_probs ['asia', 'asian', '##asia', 'india', 'africa', 'east', 'south', 'and', ',', 'asiatic']\n",
+      "qi_class 0\n",
+      "################\n",
+      "lm tokens ['?', ',', 'to', 'from', '.', 'where', 'and', 'between', 'in', '[SEP]']\n",
+      "uqa_qi_probs ['from', ',', 'and', '?', 'to', 'in', '(', 'between', 'breeding', 'is']\n",
+      "qi_class 1\n",
+      "################\n",
+      "lm tokens ['[SEP]', 'a', 'come', ',', '.', '-', '?', 'o', 'dr', ')']\n",
+      "uqa_qi_probs ['[SEP]', ',', \"'\", '\"', 'a', 'from', 'look', 'the', 'is', 'and']\n",
+      "qi_class 1\n",
+      "################\n",
+      "Attempted Questions: ['where is the bitter', 'where are the black bitter', 'where can the black bitter']\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "'when was the first theatre royal in newcastle and where was the original theatre royal in newcastle ?'"
+       "'where did breeding occur in tropical asia ?'"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "QG.generate_question(context, ans, ans_start)"
+    "QG.generate_question(context, ans, ans_start, ['where'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -247,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
