--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-17T20:18:07.397532Z",
-     "start_time": "2020-05-17T20:18:07.390187Z"
+     "end_time": "2020-05-29T16:04:03.175097Z",
+     "start_time": "2020-05-29T16:04:03.167745Z"
     },
     "code_folding": []
    },
@@ -40,8 +40,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-17T20:18:07.790792Z",
-     "start_time": "2020-05-17T20:18:07.740841Z"
+     "end_time": "2020-05-29T16:04:07.276349Z",
+     "start_time": "2020-05-29T16:04:03.176693Z"
     },
     "code_folding": [
      86,
@@ -50,14 +50,24 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (token_generation.py, line 338)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[1;32m\"/opt/conda/lib/python3.7/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3319\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-11490715c89e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from BERTQG.token_generation import load_model, generate_token\u001b[0m\n",
-      "\u001b[0;36m  File \u001b[0;32m\"/workspace/UQA/BERTQG/token_generation.py\"\u001b[0;36m, line \u001b[0;32m338\u001b[0m\n\u001b[0;31m    banned_ids = tokenizer.convert_tokens_to_ids(['.', ',', \"'\", '\"', , ':', '(', ')', '?', '[SEP]'])\u001b[0m\n\u001b[0m                                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "05/29/2020 16:04:03 - INFO - transformers.file_utils -   PyTorch version 1.4.0 available.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "05/29/2020 16:04:07 - INFO - transformers.file_utils -   TensorFlow version 2.1.0 available.\n"
      ]
     }
    ],
@@ -163,11 +173,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-14T07:57:36.366830Z",
-     "start_time": "2020-05-14T07:57:16.088479Z"
+     "end_time": "2020-05-29T16:04:24.952462Z",
+     "start_time": "2020-05-29T16:04:12.515806Z"
     }
    },
    "outputs": [
@@ -175,9 +185,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "05/14/2020 07:57:16 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
-      "05/14/2020 07:57:22 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
-      "05/14/2020 07:57:22 - INFO - BERTQG.modeling -   Model config {\n",
+      "05/29/2020 16:04:12 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
+      "05/29/2020 16:04:14 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
+      "05/29/2020 16:04:14 - INFO - BERTQG.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -204,9 +214,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "05/14/2020 07:57:24 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
-      "05/14/2020 07:57:27 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
-      "05/14/2020 07:57:27 - INFO - BERTQG.modeling -   Model config {\n",
+      "05/29/2020 16:04:15 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
+      "05/29/2020 16:04:15 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
+      "05/29/2020 16:04:15 - INFO - BERTQG.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -233,8 +243,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "05/14/2020 07:57:29 - INFO - transformers.configuration_utils -   loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-config.json from cache at /root/.cache/torch/transformers/4dad0251492946e18ac39290fcfe91b89d370fee250efe9521476438fe8ca185.7156163d5fdc189c3016baca0775ffce230789d7fa2a42ef516483e4ca884517\n",
-      "05/14/2020 07:57:29 - INFO - transformers.configuration_utils -   Model config BertConfig {\n",
+      "05/29/2020 16:04:18 - INFO - transformers.configuration_utils -   loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-config.json from cache at /root/.cache/torch/transformers/4dad0251492946e18ac39290fcfe91b89d370fee250efe9521476438fe8ca185.7156163d5fdc189c3016baca0775ffce230789d7fa2a42ef516483e4ca884517\n",
+      "05/29/2020 16:04:18 - INFO - transformers.configuration_utils -   Model config BertConfig {\n",
       "  \"_num_labels\": 2,\n",
       "  \"architectures\": [\n",
       "    \"BertForMaskedLM\"\n",
@@ -290,9 +300,9 @@
       "  \"vocab_size\": 30522\n",
       "}\n",
       "\n",
-      "05/14/2020 07:57:30 - INFO - transformers.tokenization_utils -   loading file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-vocab.txt from cache at /root/.cache/torch/transformers/26bc1ad6c0ac742e9b52263248f6d0f00068293b33709fae12320c0e35ccfbbb.542ce4285a40d23a559526243235df47c5f75c197f04f37d1a0c124c32c9a084\n",
-      "05/14/2020 07:57:31 - INFO - transformers.configuration_utils -   loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-config.json from cache at /root/.cache/torch/transformers/4dad0251492946e18ac39290fcfe91b89d370fee250efe9521476438fe8ca185.7156163d5fdc189c3016baca0775ffce230789d7fa2a42ef516483e4ca884517\n",
-      "05/14/2020 07:57:31 - INFO - transformers.configuration_utils -   Model config BertConfig {\n",
+      "05/29/2020 16:04:19 - INFO - transformers.tokenization_utils -   loading file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-vocab.txt from cache at /root/.cache/torch/transformers/26bc1ad6c0ac742e9b52263248f6d0f00068293b33709fae12320c0e35ccfbbb.542ce4285a40d23a559526243235df47c5f75c197f04f37d1a0c124c32c9a084\n",
+      "05/29/2020 16:04:20 - INFO - transformers.configuration_utils -   loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-config.json from cache at /root/.cache/torch/transformers/4dad0251492946e18ac39290fcfe91b89d370fee250efe9521476438fe8ca185.7156163d5fdc189c3016baca0775ffce230789d7fa2a42ef516483e4ca884517\n",
+      "05/29/2020 16:04:20 - INFO - transformers.configuration_utils -   Model config BertConfig {\n",
       "  \"_num_labels\": 2,\n",
       "  \"architectures\": [\n",
       "    \"BertForMaskedLM\"\n",
@@ -928,22 +938,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Dataset Generation with regularization (Soft-Target)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-14T08:13:55.488301Z",
-     "start_time": "2020-05-14T08:13:55.115194Z"
-    },
-    "hidden": true
+     "end_time": "2020-05-29T16:04:25.892799Z",
+     "start_time": "2020-05-29T16:04:24.953813Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -956,13 +963,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-13T05:34:55.219591Z",
-     "start_time": "2020-05-13T05:34:55.214127Z"
-    },
-    "hidden": true
+     "end_time": "2020-05-29T16:04:25.900194Z",
+     "start_time": "2020-05-29T16:04:25.894273Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -974,19 +980,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-13T15:30:25.990165Z",
-     "start_time": "2020-05-13T05:37:25.516700Z"
-    },
-    "hidden": true
+     "end_time": "2020-05-29T18:46:41.213538Z",
+     "start_time": "2020-05-29T16:04:50.370236Z"
+    }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b8c527a351a4f6ebccc912aa458f3ef",
+       "model_id": "374f9fa201c0494d8eedcc700c92ec85",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1044,26 +1049,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-14T00:44:35.380289Z",
-     "start_time": "2020-05-14T00:44:31.577544Z"
-    },
-    "hidden": true
+     "end_time": "2020-05-29T18:46:45.016964Z",
+     "start_time": "2020-05-29T18:46:41.215050Z"
+    }
    },
    "outputs": [],
    "source": [
-    "with open('data/finalQG_train_10k.json', 'w') as f:\n",
+    "with open('data/finalQG_train_10k_len_20_no_ans.json', 'w') as f:\n",
     "    json.dump(output, f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# question: what is the traffic leading on the root ! compendium page ?\n",
@@ -1091,8 +1093,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-17T20:18:41.317844Z",
-     "start_time": "2020-05-17T20:18:40.491907Z"
+     "end_time": "2020-05-30T11:42:49.968236Z",
+     "start_time": "2020-05-30T11:42:49.148702Z"
     }
    },
    "outputs": [],
@@ -1109,8 +1111,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-17T20:18:41.609409Z",
-     "start_time": "2020-05-17T20:18:41.319294Z"
+     "end_time": "2020-05-30T11:42:50.455393Z",
+     "start_time": "2020-05-30T11:42:49.969708Z"
     },
     "code_folding": []
    },
@@ -1124,6 +1126,9 @@
     }
    ],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "from BERTQG.token_generation import load_model, generate_token\n",
     "from itertools import groupby\n",
     "\n",
@@ -1201,8 +1206,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-17T20:19:06.232870Z",
-     "start_time": "2020-05-17T20:19:03.133481Z"
+     "end_time": "2020-05-30T11:50:22.078771Z",
+     "start_time": "2020-05-30T11:50:18.918474Z"
     }
    },
    "outputs": [
@@ -1210,9 +1215,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "05/17/2020 20:19:03 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
-      "05/17/2020 20:19:04 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
-      "05/17/2020 20:19:04 - INFO - BERTQG.modeling -   Model config {\n",
+      "05/30/2020 11:50:18 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
+      "05/30/2020 11:50:20 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
+      "05/30/2020 11:50:20 - INFO - BERTQG.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -1232,35 +1237,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Load BERTQG/models/finalQG_train_10k/pytorch_model.bin\n"
+      "Load BERTQG/models/finalQG_train_10k_len_20_no_ans/pytorch_model.bin\n"
      ]
     }
    ],
    "source": [
     "bert_model = 'BERTQG/models/bert-base-uncased'\n",
-    "final_qg = 'BERTQG/models/finalQG_train_10k/pytorch_model.bin'\n",
+    "final_qg = 'BERTQG/models/finalQG_train_10k_len_20_no_ans/pytorch_model.bin'\n",
     "Final_QG = QuestionGeneration(bert_model, final_qg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-17T20:19:11.458057Z",
-     "start_time": "2020-05-17T20:19:06.234225Z"
+     "end_time": "2020-05-30T13:51:35.874108Z",
+     "start_time": "2020-05-30T11:51:10.186440Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a35db71207a4fb087970d28134f715d",
+       "model_id": "378649c823ef4e1eb656c10fa31efaee",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=10.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=10000.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -1270,25 +1275,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "question: who saw the was a catholic of england and did not see that taxes were due ?\n",
-      "question: what was photography of the photograph is that you were a photographer did it ?\n",
-      "question: what arrived at camp pendleton was the 1st marine division of army ?\n",
-      "question: what else is called the people of labrador and are they have a language that means \"\n",
-      "question: who is drew kirk and paul mcclain - a friend of the other two ?\n",
-      "question: what are there in the united states that have been killed by black bears living ?\n",
-      "question: what game was the best time you earned three assists in a series of games ?\n",
-      "question: who is the keyser sozet of a bus that you ride ?\n",
-      "question: who is the author of this poem was a poet in his poetry ?\n",
-      "question: where are corncobs found in the andes of chile and bolivia ?\n",
       "\n"
      ]
     }
    ],
    "source": [
     "k = 10\n",
-    "num_data = 100000\n",
+    "num_data = 10000\n",
     "output = {'data': [], 'version': 'v1.1'}\n",
-    "for article in tqdm(UQA_finalQG_100k[10000:10010]):\n",
+    "for article in tqdm(UQA_finalQG_100k[:num_data]):\n",
     "    for paragraph in article['paragraphs']:\n",
     "        for question in paragraph['qas']:\n",
     "            qid = question['id']\n",
@@ -1299,10 +1294,10 @@
     "#             print('context:', context)\n",
     "#             print('ans:', ans)\n",
     "#             print('ans_start:', ans_start)\n",
-    "            assert context[ans_start:ans_start+len(ans)] == ans\n",
+    "            assert context[ans_start:ans_start+len(ans)] == ans \n",
     "\n",
     "            question, indices, probs = Final_QG.generate_question(context, ans, ans_start, wh_word)\n",
-    "            print('question:', question.replace(' ##', ''))\n",
+    "#             print('question:', question.replace(' ##', ''))\n",
     "#             print('indices:', indices)\n",
     "#             print('\\n')\n",
     "\n",
@@ -1332,17 +1327,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-17T17:19:49.262660Z",
-     "start_time": "2020-05-17T17:19:46.271886Z"
+     "end_time": "2020-05-30T13:59:26.368354Z",
+     "start_time": "2020-05-30T13:59:26.018457Z"
     }
    },
    "outputs": [],
    "source": [
-    "with open('data/finalQG_dev_100k.json', 'w') as f:\n",
+    "with open('data/finalQG_dev_10k_len_20_no_ans_full.json', 'w') as f:\n",
     "    json.dump(output, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-28T03:07:12.197590Z",
+     "start_time": "2020-05-28T03:07:12.180275Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22.7"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "for article in output['data']:\n",
+    "    for paragraph in article['paragraphs']:\n",
+    "        for question in paragraph['qas']:\n",
+    "            total += len(question['question'].split())\n",
+    "total / 10"
    ]
   },
   {
